# xf86-input-vmmouse

./: .gitignore  .gitlab-ci.yml  Makefile.am  README  configure.ac
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
.github/workflows/: build.yml
man/: Makefile.am  vmmouse.man  vmmouse_detect.man
shared/: Makefile.am  vmmouse_client.c  vmmouse_client.h  vmmouse_proto.c  vmmouse_proto.h
src/: Makefile.am  vmmouse.c  xf86OSmouse.h
tools/: Makefile.am  vmmouse_detect.c  vmmouse_iopl.c  vmmouse_udev.c
